add check list by specific cashier within day
