# go-server/docs/swagger.json
@@ -293,7 +293,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "sorted",
+                        "description": "employee_id",
                         "name": "employee_id",
                         "in": "query"
                     },
@@ -408,7 +408,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "sorted",
+                        "description": "employee_id",
                         "name": "employee_id",
                         "in": "query"
                     },
@@ -438,6 +438,55 @@
                                     "type": "number",
                                     "format": "float64"
                                 }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/checks/today": {
+            "get": {
+                "description": "Retrieves all checks by specific cashier within today",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Checks"
+                ],
+                "summary": "Get all checks by specific cashier within today",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "employee_id",
+                        "name": "employee_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/views.CheckListResponse"
                             }
                         }
                     },
@@ -865,7 +914,7 @@
         "views.CheckListResponse": {
             "type": "object",
             "properties": {
-                "check_response": {
+                "check": {
                     "$ref": "#/definitions/views.CheckResponse"
                 },
                 "product": {
@@ -899,7 +948,7 @@
         "views.CheckResponseWithProducts": {
             "type": "object",
             "properties": {
-                "check_response": {
+                "check": {
                     "$ref": "#/definitions/views.CheckResponse"
                 },
                 "products": {
@@ -1068,16 +1117,14 @@
         "views.SaleResponse": {
             "type": "object",
             "properties": {
-                "checkNumber": {
+                "check_number": {
                     "type": "string"
                 },
-                "productNumber": {
-                    "type": "integer",
-                    "format": "int32"
+                "product_number": {
+                    "type": "integer"
                 },
-                "sellingPrice": {
-                    "type": "number",
-                    "format": "float64"
+                "selling_price": {
+                    "type": "number"
                 },
                 "upc": {
                     "type": "string"
